Fix styles, overlapping of textarea was broken

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -41,6 +41,7 @@ body {
     color: transparent;
     background: transparent;
     caret-color: var(--text-color);
+    padding: 0.2em 0.5em;
   }
 
   .texts {
